logs/dag_id=weather_dag/run_id=scheduled__2024-06-22T00:00:00+00:00/task_id=create_table_if_not_exists/attempt=5.log
[2024-06-24T10:50:53.618+0000] {local_task_job_runner.py:120} INFO - ::group::Pre task execution logs
[2024-06-24T10:50:53.638+0000] {taskinstance.py:2076} INFO - Dependencies all met for dep_context=non-requeueable deps ti=<TaskInstance: weather_dag.create_table_if_not_exists scheduled__2024-06-22T00:00:00+00:00 [queued]>
[2024-06-24T10:50:53.647+0000] {taskinstance.py:2076} INFO - Dependencies all met for dep_context=requeueable deps ti=<TaskInstance: weather_dag.create_table_if_not_exists scheduled__2024-06-22T00:00:00+00:00 [queued]>
[2024-06-24T10:50:53.648+0000] {taskinstance.py:2306} INFO - Starting attempt 5 of 5
[2024-06-24T10:50:53.661+0000] {taskinstance.py:2330} INFO - Executing <Task(PostgresOperator): create_table_if_not_exists> on 2024-06-22 00:00:00+00:00
[2024-06-24T10:50:53.669+0000] {warnings.py:112} WARNING - /home/***/.local/lib/python3.12/site-packages/***/task/task_runner/standard_task_runner.py:61: DeprecationWarning: This process (pid=708) is multi-threaded, use of fork() may lead to deadlocks in the child.
  pid = os.fork()

[2024-06-24T10:50:53.670+0000] {standard_task_runner.py:63} INFO - Started process 710 to run task
[2024-06-24T10:50:53.671+0000] {standard_task_runner.py:90} INFO - Running: ['***', 'tasks', 'run', 'weather_dag', 'create_table_if_not_exists', 'scheduled__2024-06-22T00:00:00+00:00', '--job-id', '68', '--raw', '--subdir', 'DAGS_FOLDER/weather_dag.py', '--cfg-path', '/tmp/tmppb4rkucp']
[2024-06-24T10:50:53.673+0000] {standard_task_runner.py:91} INFO - Job 68: Subtask create_table_if_not_exists
[2024-06-24T10:50:53.716+0000] {task_command.py:426} INFO - Running <TaskInstance: weather_dag.create_table_if_not_exists scheduled__2024-06-22T00:00:00+00:00 [running]> on host afc8096e8b86
[2024-06-24T10:50:53.804+0000] {taskinstance.py:2648} INFO - Exporting env vars: AIRFLOW_CTX_DAG_OWNER='***' AIRFLOW_CTX_DAG_ID='weather_dag' AIRFLOW_CTX_TASK_ID='create_table_if_not_exists' AIRFLOW_CTX_EXECUTION_DATE='2024-06-22T00:00:00+00:00' AIRFLOW_CTX_TRY_NUMBER='5' AIRFLOW_CTX_DAG_RUN_ID='scheduled__2024-06-22T00:00:00+00:00'
[2024-06-24T10:50:53.805+0000] {taskinstance.py:430} INFO - ::endgroup::
[2024-06-24T10:50:53.805+0000] {sql.py:276} INFO - Executing: CREATE OR REPLACE TABLE IF NOT EXISTS public.measures
			(
    			timestamp  timestamp,
    			temp       float4,
                        humidity   float4,
                        clouds     float4,
                        wind_speed float4,
    			city       varchar
		 );
[2024-06-24T10:50:53.815+0000] {base.py:84} INFO - Using connection ID 'ps_db_conn' for task execution.
[2024-06-24T10:50:53.826+0000] {base.py:84} INFO - Using connection ID 'ps_db_conn' for task execution.
[2024-06-24T10:50:53.830+0000] {sql.py:487} INFO - Running statement: CREATE OR REPLACE TABLE IF NOT EXISTS public.measures
			(
    			timestamp  timestamp,
    			temp       float4,
                        humidity   float4,
                        clouds     float4,
                        wind_speed float4,
    			city       varchar
		 );, parameters: None
[2024-06-24T10:50:53.832+0000] {taskinstance.py:441} INFO - ::group::Post task execution logs
[2024-06-24T10:50:53.832+0000] {taskinstance.py:2905} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/models/taskinstance.py", line 465, in _execute_task
    result = _execute_callable(context=context, **execute_callable_kwargs)
             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/models/taskinstance.py", line 432, in _execute_callable
    return execute_callable(context=context, **execute_callable_kwargs)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/models/baseoperator.py", line 401, in wrapper
    return func(self, *args, **kwargs)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/providers/common/sql/operators/sql.py", line 282, in execute
    output = hook.run(
             ^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/providers/common/sql/hooks/sql.py", line 435, in run
    self._run_command(cur, sql_statement, parameters)
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/providers/common/sql/hooks/sql.py", line 492, in _run_command
    cur.execute(sql_statement)
psycopg2.errors.SyntaxError: syntax error at or near "TABLE"
LINE 1: CREATE OR REPLACE TABLE IF NOT EXISTS public.measures
                          ^

[2024-06-24T10:50:53.841+0000] {taskinstance.py:1206} INFO - Marking task as FAILED. dag_id=weather_dag, task_id=create_table_if_not_exists, run_id=scheduled__2024-06-22T00:00:00+00:00, execution_date=20240622T000000, start_date=20240624T105053, end_date=20240624T105053
[2024-06-24T10:50:53.854+0000] {standard_task_runner.py:110} ERROR - Failed to execute job 68 for task create_table_if_not_exists (syntax error at or near "TABLE"
LINE 1: CREATE OR REPLACE TABLE IF NOT EXISTS public.measures
                          ^
; 710)
[2024-06-24T10:50:53.884+0000] {local_task_job_runner.py:240} INFO - Task exited with return code 1
[2024-06-24T10:50:53.893+0000] {warnings.py:112} WARNING - /home/***/.local/lib/python3.12/site-packages/***/models/baseoperator.py:1297: AirflowProviderDeprecationWarning: Call to deprecated class SimpleHttpOperator. (Class `SimpleHttpOperator` is deprecated and will be removed in a future release. Please use `HttpOperator` instead.)
  result = cls.__new__(cls)

[2024-06-24T10:50:53.894+0000] {warnings.py:112} WARNING - /home/***/.local/lib/python3.12/site-packages/***/models/baseoperator.py:1297: AirflowProviderDeprecationWarning: Call to deprecated class PostgresOperator. (Please use `***.providers.common.sql.operators.sql.SQLExecuteQueryOperator`.Also, you can provide `hook_params={'schema': <database>}`.)
  result = cls.__new__(cls)

[2024-06-24T10:50:53.911+0000] {taskinstance.py:3503} INFO - 0 downstream tasks scheduled from follow-on schedule check
[2024-06-24T10:50:53.917+0000] {local_task_job_runner.py:222} INFO - ::endgroup::
